--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,33 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-		</plugins>
+
+<plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <executions>
+      <execution>
+        <phase>package</phase>
+        <goals>
+          <goal>single</goal>
+        </goals>
+      </execution>
+    </executions>
+    <configuration>
+      <archive>
+        <manifest>
+          <addClasspath>true</addClasspath>
+          <mainClass>net.nenko.AppLogProps.App</mainClass>
+        </manifest>
+      </archive>
+      <descriptorRefs>
+        <descriptorRef>jar-with-dependencies</descriptorRef>
+      </descriptorRefs>
+    </configuration>
+  </plugin> 
+
+
+        </plugins>
+
 	</build>
 
 </project>
